<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    
    >
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/latitude"
    android:background="#0066CC"
    />
    <TextView  
    android:id="@+id/lat"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textColor="#000000"
    android:text=" "
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/longitude"
    android:background="#0066CC"
    />
    <TextView  
	android:id="@+id/longi"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=" "
   	android:textColor="#000000"
    />
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/country"
    android:background="#0066CC"
    />
    <TextView  
	android:id="@+id/country"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=" "
    android:textColor="#000000"
    
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/city"
    android:background="#0066CC"
    />
    <TextView  
	android:id="@+id/city"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=" "
    android:textColor="#000000"
    
    />
    <TextView	
    	android:text="@string/pass_text"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:textColor="#000000"
    	android:paddingTop="10dip"/>
    <EditText
        android:id="@+id/pass1"
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>
    <TextView	
    	android:text="@string/pass_text2"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:textColor="#000000"/>
    <EditText
        android:id="@+id/pass2"
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>
   <LinearLayout
   		android:orientation="horizontal"
   		android:layout_width="fill_parent"
   		android:layout_height="fill_parent">
   <Button
   		android:id="@+id/date_picker"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:text="@string/date_text"/>
   <TextView
   		android:id="@+id/birthdate"
   		android:textColor="#000000"
   		android:layout_height="wrap_content"
   		android:layout_width="wrap_content"
   		android:paddingLeft="20dip"
   		android:text="@string/date_text"/>
    </LinearLayout>
</LinearLayout>
